fix(cors): Reconfig cors for service